--- a/reservation.css
+++ b/reservation.css
@@ -102,6 +102,8 @@ color: rgb(255, 255, 255);
     }
     .main-page{
         flex-direction: column;
+        width:100%;
+        
     }
     .form{
         width: 100%;
